--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -1,4 +1,8 @@
 @import "../base/variables";
+.titulo-3{
+    text-align: center;
+    font-size: 33px;
+}
 .row{
     padding: 10px;
     display: flex;
