--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,4 @@
 @import "./components/videojuegos-y-prodv";
 @import "./components/contacto";
 @import "./components/header";
-@import "./responsive";
+@import "./base/responsive";
