--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,1 +1,41 @@
 $color-blue:rgb(0, 59, 221);
+%comprar{
+    color: rgb(0, 0, 0);
+    background-color: rgba(46, 43, 68, 0.644);
+    border-radius: 5px;
+    width: 83px;
+    height: 25px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 1.5s;
+}
+%producto{
+    width: 200px;
+    height: 283px;
+    border: 2px solid rgb(88, 88, 88);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 7px;
+    text-align: center;
+    transition: 1.25s;
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+%flex-column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+$boton:(
+    borde-card: 2px solid rgb(88, 88, 88),
+    borde-radio: 5px,
+);
+@mixin imagen ($ancho, $alto, $borde-1, $borde-2){
+    width: $ancho;
+    height: $alto;
+    border-top-left-radius: $borde-1;
+    border-top-right-radius: $borde-2;
+}
